# game-of-life

./: .gitignore  CMakeLists.txt  FrameGraphics.cpp  FrameGraphics.h  GameOfLifeApp.cpp  GameOfLifeApp.h  GraphicsGameClasses.cpp  GraphicsGameClasses.h  README.md  SimpleArrayGame.cpp  SimpleArrayGame.h  compile.sh  make-tar.sh  windowGraphics.cpp  windowGraphics.h
tars/: README-template.md
